--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ edition = "2018"
 matrix-sdk = { version = "*", path ="../matrix-rust-sdk/matrix_sdk/" }
 tokio = { version = "1.0.2", features = ["full", "time"] }
 url = "*"
+futures = "*"
 
 #eigene Programmierung für Bots
-dotenv = "*"
 rand = "*"
 serde = "*"
 serde_json = "*"
